--- a/cypressBioConnect/package.json
+++ b/cypressBioConnect/package.json
@@ -24,6 +24,7 @@
     "cypress-iframe": "^1.0.1",
     "cypress-plugin-retries": "^1.5.2",
     "del-cli": "^3.0.1",
+    "faker": "^4.1.0",
     "mocha": "^5.2.0",
     "mochawesome": "^6.1.1",
     "mochawesome-merge": "^4.1.0",
