--- a/cypressBioConnect/package.json
+++ b/cypressBioConnect/package.json
@@ -23,6 +23,7 @@
     "cypress": "^4.12.1",
     "cypress-iframe": "^1.0.1",
     "cypress-plugin-retries": "^1.5.2",
+    "cypress-xpath": "^1.6.1",
     "del-cli": "^3.0.1",
     "faker": "^4.1.0",
     "mocha": "^5.2.0",
